@@ -78,7 +78,12 @@ class tx_ncstaticfilecache_tasks_processDirtyPages_AdditionalFieldProvider imple
 	 * @return	boolean					True if validation was ok (or selected class is not relevant), false otherwise
 	 */
 	public function validateAdditionalFields(array &$submittedData, tx_scheduler_Module $schedulerModule) {
-		if ( t3lib_div::intval_positive($submittedData['itemLimit']) > 0 ) {
+
+		$itemLimit = class_exists('t3lib_utility_Math') ?
+			t3lib_utility_Math::convertToPositiveInteger($submittedData['itemLimit']) :
+			t3lib_div::intval_positive($submittedData['itemLimit']);
+
+		if ( $itemLimit > 0 ) {
 			return true;
 		} else {
 			$schedulerModule->addMessage('no valid limit given (positive number expected)', t3lib_FlashMessage::ERROR);
